2012-04-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Write out coordinates to the precision implied by
	SVG_SCALE.

	* src/set.c: Fix incorrect test for error return from iconv().

2012-04-24  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* term/aquaterm.trm:  Clip images to bounding box. Reset line type
	at the start of each plot.

2012-04-23  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in m4/apple.m4:  Add a configuration option for aquaterm.
	The default is --without-aquaterm, select using --with-aquaterm.

2012-04-20  Ethan A Merritt  <merritt@u.washington.edu>

	* term/aquaterm.trm: rgba colors

2012-04-18  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/canvasmath.js (measure): Correct width of composite characters

	* term/svg.trm: The svg code refers to CANVAS_OVERSAMPLE when it should
	refer to SVG_SCALE.  Fortunately they both equal 10.

2012-04-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (load_file):  If the input file did not end in a newline,
	the test for balanced {} occurred too early, causing a false error if
	the final partial line did in fact contain the required }.
	Bug #3518476

	* src/command.c src/datafile.c src/graph3d.c src/graphics.c
	src/hidden3d.c src/mouse.c src/util3d.c:
	Remove dead code.

	* config/config.nt config/config.os2 config/config.oww config/config.mgw
	config/config.cyg config/config.dj2 config/config.wc src/parse.c
	src/plot2d.c src/plot3d.c src/show.c src/eval.c src/set.c:
	Remove the --enable-backwards-compatibility configuration option.
	The deprecation warning has been in the documentation since version 4.0
	and it wasn't working in recent versions anyhow.

2012-04-12  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in term/gd.trm:  We no longer claim to support libgd 
	versions older than 2.0

	* docs/gnuplot.doc:  Clear out the New Features section, which should
	now cover stuff added since 4.6
