@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.312 2012/04/24 03:30:13 sfeam Exp $
+dnl $Id: configure.in,v 1.313 2012/04/25 15:06:52 sfeam Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to disable DEVELOPMENT_RELEASE
@@ -79,6 +79,7 @@ dnl X/Emacs for building lisp packages and creating .texi version of docs
 # If you have an Emacs named "t", then use the full path.
 test x"$EMACS" = xt && EMACS=
 AC_CHECK_PROGS(EMACS, emacs xemacs, no)
+AM_PATH_LISPDIR
 
 dnl Allow manual specification of tex
 AC_ARG_WITH(latex,[  --without-latex         disable latex support, (default enable)],[],[with_latex="yes"])
